--- a/mozilla/userChrome.css
+++ b/mozilla/userChrome.css
@@ -46,50 +46,65 @@ See the above repository for updates as well as full license text. */
 /* Move up the content view */
 :root[sessionrestored]:not([inFullscreen]) > body > #browser{ margin-top: var(--uc-navbar-transform); }
 
-/* Source file https://github.com/MrOtherGuy/firefox-csshacks/tree/master/chrome/autohide_main_toolbar.css made available under Mozilla Public License v. 2.0
+/* Source file https://github.com/MrOtherGuy/firefox-csshacks/tree/master/chrome/autohide_bookmarks_toolbar.css made available under Mozilla Public License v. 2.0
 See the above repository for updates as well as full license text. */
 
-/* This style hides the main toolbar and shows it when the cursor is over the tabs toolbar as well as whenever the focus is inside nav-bar, such as when urlbar is focused. */
+#PersonalToolbar{
+    --uc-bm-height: 20px; /* Might need to adjust if the toolbar has other buttons */
+    --uc-bm-padding: 7px; /* Vertical padding to be applied to bookmarks */
+    --uc-autohide-toolbar-delay: 600ms; /* The toolbar is hidden after 0.6s */
 
-:root{ --uc-navbar-transform: -40px }
-:root[uidensity="compact"]{ --uc-navbar-transform: -34px }
-
-:root[sessionrestored] :where(#nav-bar,#PersonalToolbar,#tab-notification-deck){
-    transform: translateY(var(--uc-navbar-transform))
+    /* 0deg = "show" ; 90deg = "hide" ;  Set the following to control when bookmarks are shown */
+    --uc-autohide-toolbar-focus-rotation: 0deg; /* urlbar is focused */
+    --uc-autohide-toolbar-hover-rotation: 0deg; /* cursor is over the toolbar area */
 }
 
-:root:is([customizing],[chromehidden*="toolbar"]) :where(#nav-bar,#PersonalToolbar,#tab-notification-deck){
-    transform: none !important;
-    opacity: 1 !important;
-}
+:root[uidensity="compact"] #PersonalToolbar{ --uc-bm-padding: 1px; }
+:root[uidensity="touch"] #PersonalToolbar{ --uc-bm-padding: 7px }
 
-#nav-bar:not([customizing]){
-    opacity: 0;
-    transition:  transform 400ms ease 1.8s, opacity 400ms ease 1.8s !important;
+#PersonalToolbar:not([customizing]){
     position: relative;
-    z-index: 2;
-}
-#TabsToolbar{ position: relative; z-index: 3 }
-
-/* Show when toolbox is focused, like when urlbar has received focus */
-#navigator-toolbox:focus-within > .browser-toolbar{
-    transform: translateY(0);
-    opacity: 1;
-    transition-duration: 500ms, 200ms !important;
-    transition-delay: 0s !important;
-}
-/* Show when toolbox is hovered */
-#titlebar:hover ~ .browser-toolbar,
-#nav-bar:hover,
-#nav-bar:hover + #PersonalToolbar{
-    transform: translateY(0);
-    opacity: 1;
-    transition-duration: 500ms, 200ms !important;
-    transition-delay: 0s !important;
+    margin-bottom: calc(0px - var(--uc-bm-height) - 2 * var(--uc-bm-padding));
+    transform: rotateX(90deg);
+    transform-origin: top;
+    transition: transform 135ms linear var(--uc-autohide-toolbar-delay) !important;
+    z-index: 1;
+    /* The following properties should allow the themes with trasparent toolbars to work */
+    background-color: transparent !important;
+    background-repeat: no-repeat,no-repeat,var(--lwt-background-tiling);
+    --uc-bg-y: calc(-2 * (var(--tab-block-margin) + var(--toolbarbutton-inner-padding) + var(--toolbarbutton-outer-padding)) - var(--tab-min-height) - 16px - var(--bookmark-block-padding));
+    background-position: top left,top left,var(--lwt-background-alignment,top left);
+    background-position-y:top,top,var(--uc-bg-y),var(--uc-bg-y),var(--uc-bg-y);
+    background-image: var(--toolbar-bgimage), linear-gradient(var(--toolbar-bgcolor),var(--toolbar-bgcolor)),var(--lwt-header-image,var(--lwt-additional-images)) !important;
 }
 
-/* Bookmarks toolbar needs so extra rules */
-#PersonalToolbar{ transition: transform 400ms ease 1.8s !important; position: relative; z-index: 1 }
+#PlacesToolbarItems > .bookmark-item,
+#OtherBookmarks,
+#PersonalToolbar > #import-button{
+    padding-block: var(--uc-bm-padding) !important;
+}
 
-/* Move up the content view */
-:root[sessionrestored]:not([inFullscreen]) > body > #browser{ margin-top: var(--uc-navbar-transform); }
+#nav-bar:focus-within + #PersonalToolbar{
+    transition-delay: 100ms !important;
+    transform: rotateX(var(--uc-autohide-toolbar-focus-rotation,0));
+}
+
+#navigator-toolbox:hover > #PersonalToolbar{
+    transition-delay: 100ms !important;
+    transform: rotateX(var(--uc-autohide-toolbar-hover-rotation,0));
+}
+
+#navigator-toolbox:hover > #nav-bar:focus-within + #PersonalToolbar {
+    transform: rotateX(0);
+}
+
+/* Uncomment to enable compatibility for multi-row_bookmarks.css */
+/* This would break buttons placed in the toolbar but that is likely not happening if you are using multi-row setup  */
+/*
+#PersonalToolbar:not([customizing]){
+  position: fixed;
+  display: block;
+  margin-bottom: 0px !important;
+}
+*/
+
