--- a/config/waybar/style.css
+++ b/config/waybar/style.css
@@ -34,20 +34,32 @@ window#waybar {
 	background: #4c566a;
 }
 
+#workspaces * {
+  min-height: 0;
+  min-width: 0;
+}
+
 #workspaces button {
 	color: #fdf6e3;
+  margin-bottom: 3px;
+  padding-top: 6px;
+  padding-bottom: 2px;
+}
+#workspaces button.active {
+  background: #3b4252;
+  box-shadow: inherit;
+  text-shadow: inherit;
 }
 #workspaces button.focused {
-	color: #268bd2;
+	color: #3b4252;
 }
 #workspaces button:hover {
 	box-shadow: inherit;
 	text-shadow: inherit;
-}
-#workspaces button:hover {
-	background: #1a1a1a;
-	border: #1a1a1a;
-	padding: 3px 10px 0px 10px;
+	background: #3b4252;
+	border: #4c566a;
+  padding: inherit;
+/*	padding: 3px 10px 0px 10px; */
 }
 
 #pulseaudio {
@@ -66,7 +78,7 @@ window#waybar {
 	color: #b58900;
 }
 
-#workspace,
+#workspaces,
 #pulseaudio,
 #memory,
 #cpu,
@@ -94,3 +106,5 @@ window#waybar {
 #network{
 	padding: 0 10px;
 }
+
+
