--- a/config/wofi/style.css
+++ b/config/wofi/style.css
@@ -1,6 +1,6 @@
 window {
     margin: 0px;
-    border: 1px solid #88c0d0;
+/*    border: 1px solid #88c0d0; */
     background-color: #2e3440;
 }
 
