--- a/config/waybar/style-framework.css
+++ b/config/waybar/style-framework.css
@@ -1,120 +1,170 @@
+@import "./themes/tokyonight.css";
+
+/* Global */
 * {
-	font-size: 12px;
-	font-family: monospace;
-	font-weight: bold;
+  font-family: Iosevka Nerd Font, madness;
+  font-size: .9rem;
+  border-radius: 1rem;
+  transition-property: background-color;
+  transition-duration: 0.5s;
+  background-color: shade(@base, 0.9);
 }
 
+@keyframes blink_red {
+  to {
+    background-color: @red;
+    color: @base;
+  }
+}
+
+.warning, .critical, .urgent {
+  animation-name: blink_red;
+  animation-duration: 1s;
+  animation-timing-function: linear;
+  animation-iteration-count: infinite;
+  animation-direction: alternate;
+}
+
+#mode, #clock, #memory, #temperature, #cpu, #custom-weather,
+#mpd, #idle_inhibitor, #backlight, #pulseaudio, #network, 
+#battery, #custom-powermenu, #custom-cava-internal,
+#custom-launcher, #tray, #disk, #custom-pacman, #custom-pomodoro, #custom-dexcom, #custom-notification{
+  padding-left: .6rem;
+  padding-right: .6rem;
+}
+
+/* Bar */
 window#waybar {
-	background: #3b4252;
-	color: #fdf6e3;
-  border-radius: 10px;
+  background-color: transparent;
 }
 
-#custom-right-arrow-dark,
-#custom-left-arrow-dark {
-	color: #4c566a;
-}
-#custom-right-arrow-light,
-#custom-left-arrow-light {
-	color: #3b4252;
-	background: #4c566a;
+window > box {
+  background-color: transparent;
+  margin: .6rem;
+  margin-bottom: 0;
 }
 
-#workspaces,
-#clock.1,
-#clock.2,
-#clock.3,
-#pulseaudio,
-#battery,
-#memory,
-#cpu,
-#battery,
-#disk,
-#network,
-#network.disabled,
-#network.disconnected,
-#network.linked,
-#network.ethernet,
-#network.wifi,
-#window,
-#tray {
-	background: #4c566a;
-	font-size: 12px;
-	font-family: monospace;
-	font-weight: bold;
-}
-
-#workspaces * {
-  min-height: 0;
-  min-width: 0;
+/* Workspaces */
+#workspaces:hover {
+  background-color: @green;
 }
 
 #workspaces button {
-	color: #fdf6e3;
-  margin-bottom: 3px;
-  padding-top: 4px;
-  padding-bottom: 3px;
-}
-#workspaces button.active {
-  background: #3b4252;
-  box-shadow: inherit;
-  text-shadow: inherit;
-}
-#workspaces button.focused {
-	color: #3b4252;
-}
-#workspaces button:hover {
-	box-shadow: inherit;
-	text-shadow: inherit;
-	background: #3b4252;
-	border: #4c566a;
-  padding: inherit;
-/*	padding: 3px 10px 0px 10px; */
+  padding-right: .4rem;
+  padding-left: .4rem;
+  padding-top: .1rem;
+  padding-bottom: .1rem;
+  color: @blue;
+  /* border: .2px solid transparent; */
+  background: transparent;
 }
 
-#pulseaudio {
-	color: #268bd2;
+#workspaces button.active {
+  color: @red;
+}
+
+#workspaces button:hover {
+  /* border: .2px solid transparent; */
+  color: @subtext0;
+}
+
+/* Tooltip */
+tooltip {
+  background-color: @base;
+  border-width: 3px;
+  border-style: solid;
+  border-color: #7DCFFF;
+}
+
+tooltip label {
+  color: @text;
+}
+
+/* battery */
+#battery {
+  color: @mauve;
+}
+#battery.full {
+  color: @green;
+}
+#battery.charging{
+  color: @teal;
+}
+#battery.discharging {
+  color: @mauve;
+}
+#battery.critical:not(.charging) {
+  color: @subtext0;
+}
+#custom-powermenu {
+  color: @red;
+  margin-right: 5px;
+}
+
+/* mpd */
+#mpd.paused {
+  color: @subtext0;
+  font-style: italic;
+}
+#mpd.stopped {
+  color: @red;
+  /* background: transparent; */
+}
+#mpd {
+  color: @mauve;
+}
+
+/* Extra */
+#custom-notification{
+  color: @yellow;
+}
+#custom-cava-internal{
+  color: @mauve;
+  padding-right: 1rem;
+}
+#custom-launcher {
+  font-size: 16px;
+  color: @sky;
 }
 #memory {
-	color: #2aa198;
+  color: @maroon;
 }
 #cpu {
-	color: #8f94db;
+  color: @blue;
 }
-#battery {
-	color: #859900;
+#clock {
+  color: @text;
+}
+#idle_inhibitor {
+  color: @green;
+}
+#temperature {
+  color: @blue;
+}
+#backlight {
+  color: @yellow;
+}
+#pulseaudio {
+  color: @green;  /* not active */
+}
+#network {
+  color: @lavender; /* not active */
+}
+#network.disconnected {
+  color: @foreground;  /* not active */
 }
 #disk {
-	color: #b58900;
+  color: @teal;
 }
-
-#workspaces,
-#pulseaudio,
-#memory,
-#cpu,
-#battery,
-#window,
-#tray,
-#disk {
-	padding: 3px 10px 0px 10px;
+#custom-pacman{
+  color: @mauve;
 }
-
-#clock.1 {
-	padding: 3px 0px 0px 10px;
+#custom-scratchpad-indicator {
+  color: @yellow
 }
-
-
-#clock.2 {
-	padding: 3px 10px 0px 10px;
+#custom-weather {
+  color: @red;
 }
-
-#clock.3 {
-	padding: 3px 10px 0px 0px;
+#custom-pomodoro {
+  color: @blue;
 }
-
-
-#network{
-	padding: 0 10px;
-}
-
-
